[package]
name = "rslua-march1917"
version = "0.2.10"
description = "Yet another Lua lexer and Lua parser for Lua 5.3"
authors = ["Rose1917 <renyanjie01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rose1917/rslua.git"
readme = "README.md"
keywords = ["lua", "lua53", "parser", "lexer"]
categories = ["parsing"]

[dependencies]
num-traits = "0.2.13"
